--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             font-size: 22px;
             font-weight: 700;
             text-transform: uppercase;
-            border-bottom: 2px solid #00bfff;
             padding-bottom: 3px;
             margin-bottom: 10px;
         }
@@ -43,10 +42,10 @@
         h5 {
             font-size: 16px;
             font-weight: 600;
-            color: #00bfff;
+            color: #000000;
             margin-top: 18px;
             margin-bottom: 6px;
-            border-bottom: 1px solid #00bfff;
+            border-bottom: 1px solid #000000;
             padding-bottom: 2px;
         }
 
@@ -70,8 +69,8 @@
         }
 
         .photo {
-            width: 120px;
-            height: 150px;
+            width: 100px;
+            height: 110px;
             object-fit: cover;
             border: 1px solid #ccc;
         }
