--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         .resume {
             border: 1px solid #000000;
-            padding: 20px 25px;
+            padding: 20px;
             margin: auto;
             max-width: 210mm;
             background-color: #ffffff;
