--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
     }
 
     .cv-section h5 {
-        font-size: 16px;
+        font-size: 20px;
         font-weight: 600;
         color: #000;
         margin-top: 18px;
         margin-bottom: 6px;
         border-bottom: 1px solid #000;
-        padding-bottom: 2px;
+        padding-bottom: 5px;
     }
 
     p, ul {
@@ -94,6 +94,7 @@
     ul {
         padding-left: 18px;
         list-style-type: "➤ ";
+        line-height: 26px;
     }
 
     li {
