Modify work experience in resume
Updated work experience section to include a new job at Bohca Restaurant.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <h5>Work Experience</h5>
         <ul>
             <li>Six-month industrial training at Radisson Hotel, Jaipur (July 2019 – Jan 2020).</li>
+            <li> 1 Year experience in Bohca Restaurant, New Delhi as Steward.</li>
             <li>3.5 Years’ experience in Dirty Good Restaurant, New Delhi as F&B (1 Year as a Steward and 2.5 Years as a Senior Steward).</li>
         </ul>
     </div>
@@ -203,7 +204,6 @@
         <ul>
             <li>Reading</li>
             <li>Traveling</li>
-            <li>Volleyball</li>
             <li>Cricket</li>
             <li>Cooking</li>
         </ul>
@@ -229,3 +229,4 @@
 
 </body>
 </html>
+
