--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       grid-template-columns: 234px 1fr;
       overflow: hidden;
       animation: fadeIn 0.8s ease-in-out;
+      border: 2px solid #000000;
     }
 
     @keyframes fadeIn {
@@ -62,10 +63,10 @@
 
     .sidebar img {
       width: 153px;
-      height: 159px;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      object-fit: cover;
+    height: 159px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    object-fit: fill;
     }
 
     .sidebar h1 {
@@ -121,14 +122,15 @@
 
     .job-title {
       font-weight: 700;
-      font-size: 16px;
+      font-size: 18px;
     }
 
     .job-date {
       font-style: italic;
-      font-size: 14px;
-      color: #333;
-      margin-bottom: 3px;
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 3px;
+    margin-top: 10px;
     }
 
     @media print {
@@ -183,6 +185,7 @@
           <ul>
             <li>Reading</li>
             <li>Traveling</li>
+            <li>volleyball</li>
             <li>Cricket</li>
             <li>Cooking</li>
           </ul>
